[package]
name = "en"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
data-encoding = "2.5.0"
hex = "0.4.3"
html-escape = "0.2.13"
md5 = "0.7.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
urlencoding = "2.1.3"
